--- a/examples/ex5DisplayUserInput.html
+++ b/examples/ex5DisplayUserInput.html
@@ -13,12 +13,13 @@
         <p id="para">user</p>
         <label for="name">Enter your name: </label>
         <input type="text" id="name">
-        <button id="submit" type="submit" onclick="display()">submit</button>
+        <button id="submit" type="submit">submit</button>
         <script>
-            function display(){
+            let submit = document.getElementById("submit");
+            submit.addEventListener("click",function (){
                 let name= document.getElementById("name").value;
                 document.getElementById("para").textContent=name;
-            }
+            })
         </script>
         <script src="" async defer></script>
     </body>
